[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_handler"
edition = "2021"
path = "src/server_handler/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-async-std", "postgres" ] }
toml = "0.8.19"
futures = "0.3.31"
serde_json = "1.0.140"
log = { version = "0.4.27", features = ["serde"] }
simple_logger = "5.0.0"
rand = "0.8.5"
image = "0.25.6"
base64 = "0.22.1"